fix mined_overlap sub if no user, add superzoomer class, add food icon to topnav

--- a/client/s.css
+++ b/client/s.css
@@ -324,6 +324,16 @@ body {
     transform: scale(1.1) !important; /* (150% zoom - Note: if the zoom is too large, it will go outside of the viewport) */
     z-index:1000 !important;
 }
+.superzoomer:hover {
+    transition: transform .5s !important; /* Animation */
+    border-radius: 20px !important;
+    /*overflow:scroll !important;*/
+    box-shadow: 0px 0px 10px 10px rgba(250,250,250,0.8);
+    /*border-radius: 15px !important;*/
+    filter: drop-shadow(0px 0px 5px 5px rgba(200,200,200,.7)) !important;
+    transform: scale(1.5) !important; /* (150% zoom - Note: if the zoom is too large, it will go outside of the viewport) */
+    z-index:1000 !important;
+}
 .zoomers{
     transition: transform .2s; /* Animation */
     /* box-shadow: 0 2px 2px 2px rgba(50, 50, 100, 0.1) !important; */
